@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward()
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY)
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish()
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease)
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + {abstract} birth():List<GameProp>
 }

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward()
	+ getPower():int
}

abstract class  GameProp
{
    - type:int
    + GameProp(int locationX, int locationY, int speedX, int speedY)
    + forward()
	+ gettype():int
	+ {abstract} effect()
}


AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- GameProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- boss


BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

GameProp  <|-- BloodProp
GameProp  <|-- BombProp
GameProp  <|-- BulletProp

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward()
    + addlife()
    + shoot():List<BaseBullet>
    + birth():List<GameProp>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward()
    + shoot():List<BaseBullet>
    + birth():List<GameProp>
}

class EliteEnemy{
    - shootNum:int
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward()
    + shoot():List<BaseBullet>
    + birth():List<GameProp>
}

class boss{
    - shootNum:int
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward()
    + shoot():List<BaseBullet>
    + birth():List<GameProp>
}

class BloodProp{
+ BloodProp(int locationX, int locationY,
         int speedX, int speedY)


}

class BulletProp
{
+ BulletProp(int locationX, int locationY,
         int speedX, int speedY)
}

class BombProp
{
+ BombProp(int locationX, int locationY,
         int speedX, int speedY)
}



class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

@enduml